--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,12 @@
 section header.header{
   background-color: #f0f2f5;
 }
+
+div.map{
+  height: 200px;
+}
+#map { height: 180px; }
+.leaflet-container {
+  width: 100%;
+  height: 100vh;
+}
